--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
 .App {
-  text-align: center;
+  margin: 100px 150px;
+  width: 100vw;
+}
+
+
+.card-container {
+  display: grid;
+  width: 100%;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  grid-gap: 40px;
+
+}
+
+.filter-container {
+  margin: 40px 0px;
 }
 
 .App-header {
