Added custom select component and filter logics

--- a/src/App.css
+++ b/src/App.css
@@ -6,24 +6,18 @@
 
 .card-container {
   display: grid;
-  width: 100%;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
+  max-width: 1440px;
+  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+  /* grid-template-rows: auto auto; */
   grid-gap: 40px;
 
 }
 
-.filter-container {
-  margin: 40px 0px;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+.filter-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  margin: 40px 0px;
 }
