updated card and custom select component

--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,22 @@
   width: 100vw;
 }
 
+.title {
+  font-family: 'Avenir';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 66px;
+  color: #2E282C;
+}
 
-.card-container {
+.grid-layout {
   display: grid;
   max-width: 1440px;
-  grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
-  /* grid-template-rows: auto auto; */
+  grid-template-columns: repeat(auto-fill, minmax(600px, 600px));
   grid-gap: 40px;
 
 }
-
 
 
 
